<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/justJumpNavigation"
        android:title="@string/just_jump"
        android:icon="@drawable/rope_icon_1"
       />
    <item
        android:id="@+id/doubleJumpNavigation"
        android:title="@string/double_jump"
        android:icon="@drawable/rope_icon_2"
         />
    <item
        android:id="@+id/hiitNavigation"
        android:title="@string/hiit"
        android:icon="@drawable/rope_icon_hiit"
        />
    <item
        android:id="@+id/paramsNavigation"
        android:title="@string/params"
        android:icon="@drawable/rope_icon_params"/>
    <item
        android:id="@+id/statisticNavigation"
        android:title="@string/statistic"
        android:icon="@drawable/rope_icon_statist"/>
</menu>