<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@id/justJumpNavigation">

    <fragment
        android:id="@+id/justJumpNavigation"
        android:name="com.smartrope.sp_23.JustJumpFragment"
        android:label="@string/just_jump"
        android:tag="findFragmentByTag"
        tools:layout="@layout/fragment_just_jump">
        <action
            android:id="@+id/action_justJumpNavigation_to_doubleJumpNavigation"
            app:destination="@id/doubleJumpNavigation" />
    </fragment>
    <fragment
        android:id="@+id/doubleJumpNavigation"
        android:name="com.smartrope.sp_23.DoubleJumpFragment"
        android:label="@string/double_jump"
        tools:layout="@layout/fragment_double_jump">
        <action
            android:id="@+id/action_doubleJumpNavigation_to_hiitNavigation"
            app:destination="@id/hiitNavigation" />
    </fragment>
    <fragment
        android:id="@+id/hiitNavigation"
        android:name="com.smartrope.sp_23.HIITFragment"
        android:label="@string/hiit"
        tools:layout="@layout/fragment_hiit">
        <action
            android:id="@+id/action_hiitNavigation_to_paramsNavigation"
            app:destination="@id/paramsNavigation" />
    </fragment>
    <fragment
        android:id="@+id/paramsNavigation"
        android:name="com.smartrope.sp_23.ParamsFragment"
        android:label="@string/params"
        tools:layout="@layout/fragment_params">
        <action
            android:id="@+id/action_paramsNavigation_to_statisticNavigation"
            app:destination="@id/statisticNavigation" />
    </fragment>
    <fragment
        android:id="@+id/statisticNavigation"
        android:name="com.smartrope.sp_23.StatisticFragment"
        android:label="@string/statistic"
        tools:layout="@layout/fragment_statistic">
        <action
            android:id="@+id/action_statisticNavigation_to_justJumpNavigation"
            app:destination="@id/justJumpNavigation" />
    </fragment>
</navigation>